[package]
name = "restore"
version = "0.1.0"
authors = ["Hemanth Bollamreddi <blmhemu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ['warp_fs']

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.4"

# Config File parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# WS deps
warp_fs = {version = "0.1", path = "warp_fs"}